Add CI and deployment workflows, enhance command tab completion, and update project configurations